<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/design_default_color_secondary">





    <TextView
        android:id="@+id/biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biodata"
        android:textAlignment="center"
        android:textSize="40sp"/>
    <ImageView
        android:id="@+id/profil"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/profil"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/biodata">

    </ImageView>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profil"
        android:layout_marginTop="20dp">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_fikri_maulana_amir"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim_10118074"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelas_if_2"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin_laki_laki"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempat_tanggal_lahir_bandung_01_2000"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat_jalan_babakan_cianjur"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/golongan_darah_a"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makanan_kesukaan_ayam_goreng"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minuman_kesukaan_thaitea"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobi_bermain_mobile_legends"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lagu_favorit_dangdut"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/film_favorit_avenger"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pekerjaan_yang_diinginkan_setelah_kuliah_staff_perusahaan"
        android:layout_marginStart="20dp"
        android:textSize="28sp"/>






</LinearLayout>
        </ScrollView>

    </RelativeLayout>



</RelativeLayout>